--- a/editor.html
+++ b/editor.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Shader Editor</title>
-        <link type="text/css" rel="stylesheet" href="https://rawgit.com/patriciogonzalezvivo/glslEditor/gh-pages/build/glslEditor.css">
-        <script type="application/javascript" src="https://rawgit.com/patriciogonzalezvivo/glslEditor/gh-pages/build/glslEditor.js"></script>
-        <script src="https://cdn.tailwindcss.com"></script>
+        <link type="text/css" rel="stylesheet" href="dependencies/glslEditor.css">
+        <script type="application/javascript" src="dependencies/glslEditor.min.js"></script>
     </head>
 
 
@@ -15,6 +14,7 @@
         </body>
         
         <script src="reader.js" type="text/javascript"></script> 
+
         <script type="text/javascript">
             const glslEditor = new GlslEditor('#glsl_editor', { 
                 canvas_size: 500,
@@ -39,7 +39,7 @@
                 const regex = /shaders\/\w*\.hlsl/s;
                 let m = regex.exec(queryFile);
      
-                if (m.length == 1) {
+                if (m && m.length == 1) {
                     glslEditor.setContent("Retrieving file...");
                     loadFileAsString(m[0]);
                 }
@@ -47,10 +47,5 @@
 
         </script>
 
-
-        </script>
-
-
     </body>
-
 </html>
