Updated the tycoon listing

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div id="work" class="w-full text-white bg-gray-800 bg-opacity-95">
                 <p class="text-center text-5xl py-10">Heres some of my work:</p>
 
-                <div class="grid grid-cols-4 gap-12 m-auto p-10 w-max h-full">     
+                <div class="grid grid-cols-5 gap-12 m-auto p-10 w-max h-full">     
 
                     <!-- This Website -->
                     <div class="relative w-72 h-full rounded-md bg-gray-600">
@@ -236,10 +236,10 @@
                         </div>
                     </div>
 
-                    <!-- Card Game -->
+                    <!-- Something Else -->
                     <div class="relative w-72 h-full rounded-md bg-gray-600">
                         <div class="absolute -left-1 pl-6 pt-2 pr-2 pb-2 mt-5 rounded-r shadow bg-indigo-600">
-                            <img class="w-12" src="media/godot.png">
+                            <img class="w-12" src="media/unreal.png">
                         </div>
 
                         <div class="h-64 overflow-hidden rounded-t-md">
@@ -248,12 +248,40 @@
 
 
                         <div class="p-2 bg-gray-700">
-                            <b>Godot Card Game</b>
+                            <b>???</b>
                         </div>
 
                         <div class="p-4 mb-2 bg-gray-600">
                             <p>
-                                Networked Card Game goes here after I port it to Godot 4 and polish it.
+                                My next thing will go here
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- Tycoon -->
+                    <div class="relative w-72 h-full rounded-md bg-gray-600">
+                        <div class="absolute -left-1 pl-6 pt-2 pr-2 pb-2 mt-5 rounded-r shadow bg-indigo-600">
+                            <img class="w-12" src="media/godot.png">
+                        </div>
+
+                        <div class="h-64 overflow-hidden rounded-t-md">
+                            <img src="media/tycoon.png">
+                        </div>
+
+
+                        <div class="p-2 bg-gray-700">
+                            <b>Tycoon</b>
+                        </div>
+
+                        <div class="p-4 mb-2 bg-gray-600">
+                            <p>
+                                A networked Card Game based off of a game called scum (as it's called in NZ, Tycoon in Persona 5) to learn Godot networking. As of right now, all the gameplay is implemented but I still want to polish and even try writing shaders for it
+                            </p>
+
+                            </br>
+                            
+                            <p>
+                                You can play it soon... <!--<a class="text-blue-400" href="tycoon/Tycoon.html"><b>here</b></a>-->
                             </p>
                         </div>
                     </div>
@@ -275,9 +303,10 @@
 
                         <div class="p-4 mb-2 bg-gray-600">
                             <p>
-                                A minesweeper clone written in <b>C++</b>, I wrote this so I could further familiarize myself with the syntax. The GUI is written using an amazing open source library called <a class="text-blue-400" href="https://github.com/ocornut/imgui">Dear ImGui</a> (it has a dark theme)!
+                                A minesweeper clone written in <b>C++</b> (it has a dark theme!), I wrote this so I could further familiarize myself with the syntax. The GUI is written using an amazing open source library called <a class="text-blue-400" href="https://github.com/ocornut/imgui">Dear ImGui</a>
                             </p>
 
+                            </br>
                             </br>
 
                             <p>
@@ -292,6 +321,10 @@
                             <img class="w-12" src="media/unity.png">
                         </div>
 
+                        <div class="absolute -left-1 pl-6 pt-2 pr-2 pb-2 mt-24 rounded-r shadow bg-indigo-600">
+                            <img class="w-6" src="media/blender.png">
+                        </div>
+
                         <div class="w-72 h-64 overflow-hidden rounded-t-md">
                             <img src="media/goblin.png">
                         </div>
@@ -302,9 +335,10 @@
 
                         <div class="p-4 mb-2 bg-gray-600">
                             <p>
-                                A gamejam project I made in 3 days. I made everything myself (the art was made in blender, I'm not an artist so go easy please) except for the sound - I used royalty free sounds
+                                A gamejam project I made in 3 days, I made everything myself (I'm not an artist so go easy please) except for the sound - I used royalty free sounds and music
                             </p>
 
+                            <br/>
                             <br/>
 
                             <p>
