--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="flex mx-10 2xl:m-auto 2xl:w-1/2">
 
                     <div class="flex-none overflow-hidden rounded-full mx-8" style="width: 200px; height: 200px;">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/ToddHoward2010sm_%28cropped%29.jpg/1200px-ToddHoward2010sm_%28cropped%29.jpg" alt="Photo of me">
+                        <img src="media/me.png" alt="Photo of me">
                     </div>
 
                     <div class="mx-8">
@@ -203,7 +203,7 @@
             <div id="work" class="w-full text-white bg-gray-800 bg-opacity-95">
                 <p class="text-center text-5xl py-10">Heres some of my work:</p>
 
-                <div class="grid grid-cols-5 gap-12 m-auto p-10 w-max h-full">     
+                <div class="grid md:grid-cols-2 2xl:grid-cols-4 xl:grid-cols-3 gap-12 m-auto p-10 w-max h-full">     
 
                     <!-- This Website -->
                     <div class="relative w-72 h-full rounded-md bg-gray-600">
