Tweaked some information

--- a/index.html
+++ b/index.html
@@ -243,17 +243,17 @@
                         </div>
 
                         <div class="h-64 overflow-hidden rounded-t-md">
-                            <img src="media/gigasigma.png">
+                            <img src="media/unreal.png">
                         </div>
 
 
                         <div class="p-2 bg-gray-700">
-                            <b>???</b>
+                            <b>Unreal Engine Project</b>
                         </div>
 
                         <div class="p-4 mb-2 bg-gray-600">
                             <p>
-                                My next thing will go here
+                                I would like to try another Unreal engine product sometime in the future
                             </p>
                         </div>
                     </div>
