Added Overlay Editor

--- a/index.html
+++ b/index.html
@@ -108,6 +108,36 @@
                 <p class="text-center text-5xl pb-10 w-screen">My Work</p>
 
                 <div class="flex justify-center">
+                    <!-- Something Else -->
+                    <div class="relative float-left mx-10 w-72 rounded-md bg-gray-600">
+                        <div class="absolute -left-1 pl-6 pt-2 pr-2 pb-2 mt-5 rounded-r shadow bg-indigo-600">
+                            <img class="w-12" src="media/godot.png">
+                        </div>
+
+                        <div class="absolute -left-1 pl-6 pt-2 pr-2 pb-2 mt-24 rounded-r shadow bg-indigo-600">
+                            <img class="w-6" src="media/cplusplus.png">
+                        </div>
+
+                        <div class="h-64 overflow-hidden rounded-t-md">
+                            <img src="media/overlay.png">
+                        </div>
+
+
+                        <div class="p-2 bg-gray-700">
+                            <b>Overlay Editor</b>
+                        </div>
+
+                        <div class="p-4 mb-2 bg-gray-600">
+                            <p>
+                                An application made in godot to help streamers create overlays for their streams without having to use any code, I made an engine extension and wrote a gif decoder for this one. I plan on releasing more updates for it too
+                            
+                                </br>
+                                </br>
+
+                                You can use it soon...
+                            </p>
+                        </div>
+                    </div>
 
                     <!-- This Website -->
                     <div class="relative float-left mx-10 w-72 rounded-md bg-gray-600">
@@ -137,28 +167,6 @@
                         <div class="p-4 mb-2 bg-gray-600">
                             <p>
                                 I also made this website! I wrote my own HTML and JavaScript but I'm using TailWind for CSS. I might try using a JavaScript framework like Astro and port this site to it at some point but I'll stay plain for now.
-                            </p>
-                        </div>
-                    </div>
-
-                    <!-- Something Else -->
-                    <div class="relative float-left mx-10 w-72 rounded-md bg-gray-600">
-                        <div class="absolute -left-1 pl-6 pt-2 pr-2 pb-2 mt-5 rounded-r shadow bg-indigo-600">
-                            <img class="w-12" src="media/unreal.png">
-                        </div>
-
-                        <div class="h-64 overflow-hidden rounded-t-md">
-                            <img src="media/unreal.png">
-                        </div>
-
-
-                        <div class="p-2 bg-gray-700">
-                            <b>Unreal Engine Project</b>
-                        </div>
-
-                        <div class="p-4 mb-2 bg-gray-600">
-                            <p>
-                                I would like to try another Unreal engine product sometime in the future
                             </p>
                         </div>
                     </div>
