--- a/index.html
+++ b/index.html
@@ -7,18 +7,6 @@
         <script src="reader.js"></script>
 
         <style>
-            *{
-                -webkit-margin-before: 0px;
-                -webkit-margin-end: 0px;
-                -webkit-margin-after: 0px;
-                -webkit-margin-start: 0px;
-
-                -webkit-padding-before: 0px;
-                -webkit-padding-end: 0px;
-                -webkit-padding-after: 0px;
-                -webkit-padding-start: 0px;
-            }
-
             html, body{
                 overflow: hidden;
             }
@@ -90,12 +78,12 @@
         <div id="skills" class="flex items-start w-full h-screen bg-gray-700 bg-opacity-80 text-white"> 
             <div class="m-auto">
                 <p class="text-center md:py-10 text-xl sm:text-2xl md:text-4xl lg:text-5xl font-semibold">My Skills</p>
-                <div class="grid grid-cols-4 xl:grid-cols-5">
+                <div class="grid grid-cols-4 2xl:grid-cols-6">
 
                     <div class="tooltip relative inline-block m-10">
                         <img class="h-8 sm:h-16 md:h-24 lg:h-40" src="media/cplusplus.png">
 
-                        <span class="tooltiptext invisible absolute text-center -left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
+                        <span class="tooltiptext invisible absolute text-center lg:-left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
                             <b>C++</b> is my language of choice for coding problems, used in my overlay editor, minesweeper clone and when using Unreal Engine
                         </span>
                     </div> 
@@ -103,7 +91,7 @@
                     <div class="tooltip relative inline-block m-10">
                         <img class="h-8 sm:h-16 md:h-24 lg:h-40" src="media/python.png">
 
-                        <span class="tooltiptext invisible absolute text-center -left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
+                        <span class="tooltiptext invisible absolute text-center -left-36 sm:-left-32 md:-left-28 lg:-left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
                             <b>Python</b> is my language of choice for quick scripts as opposed to full projects since it's easy to use
                         </span>
                     </div>
@@ -111,15 +99,23 @@
                     <div class="tooltip relative inline-block m-10">
                         <img class="h-8 sm:h-16 md:h-24 lg:h-40" src="media/javascript.png">
 
-                        <span class="tooltiptext invisible absolute text-center -left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
+                        <span class="tooltiptext invisible absolute text-center -left-36 sm:-left-32 md:-left-28 lg:-left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
                             I use <b>Javascript</b> every so often when I build websites like this one
+                        </span>
+                    </div>
+
+                    <div class="tooltip relative inline-block m-10">
+                        <img class="h-8 sm:h-16 md:h-24 lg:h-40" src="media/git.png">
+
+                        <span class="tooltiptext invisible absolute text-center right-0 lg:-left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
+                            I use <b>git</b> as for my version control needs in all of my projects, including this one
                         </span>
                     </div>
                     
                     <div class="tooltip relative inline-block m-10">
                         <img class="h-8 sm:h-16 md:h-24 lg:h-40" src="media/HTML5.png">
 
-                        <span class="tooltiptext invisible absolute text-center -left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
+                        <span class="tooltiptext invisible absolute text-center lg:-left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
                             I have built a few websites since highschool and university using <b>HTML</b>
                         </span>
                     </div>
@@ -127,23 +123,31 @@
                     <div class="tooltip relative inline-block m-10">
                         <img class="h-8 sm:h-16 md:h-24 lg:h-40" src="media/CSS.png">
 
-                        <span class="tooltiptext invisible absolute text-center -left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
+                        <span class="tooltiptext invisible absolute text-center -left-36 sm:-left-32 md:-left-28 lg:-left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
                             Even though this website had inline <b>CSS</b>, I have used dedicated stylesheets as well
+                        </span>
+                    </div>
+                    
+                    <div class="tooltip relative inline-block m-10">
+                        <div class="flex h-full justify-center items-center bg-white rounded md:rounded-xl lg:rounded-2xl text-xs sm:text-xl md:text-3xl lg:text-6xl font-mono font-black text-gray-700">RegEx</div>
+
+                        <span class="tooltiptext invisible absolute text-center -left-36 sm:-left-32 md:-left-28 lg:-left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
+                            <b>RegEx</b> is a skill I frequently come back to for parsing, I use it to parse user messages from the Twitch chat IRC in my Overlay Editor for example
                         </span>
                     </div>
 
                     <div class="tooltip relative inline-block m-10">
                         <div class="flex h-full justify-center items-center bg-white rounded md:rounded-xl lg:rounded-2xl text-xs sm:text-xl md:text-3xl lg:text-6xl font-mono font-black text-gray-700">SQL</div>
 
-                        <span class="tooltiptext invisible absolute text-center -left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
-                            I have completed a university course on <b>SQL</b> but I've also used it a few times in the past, with game servers and text entries in a website I made a while ago  
+                        <span class="tooltiptext invisible absolute text-center right-0 lg:-left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
+                            I completed a university course on <b>SQL</b> but I've also used it a few times in the past, with game servers and text entries in a website I made a while ago  
                         </span>
                     </div>
 
                     <div class="tooltip relative inline-block m-10">
                         <img class="h-8 sm:h-16 md:h-24 lg:h-40" src="media/godot.png">
 
-                        <span class="tooltiptext invisible absolute text-center -left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
+                        <span class="tooltiptext invisible absolute text-center lg:-left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
                             <b>Godot</b> is my current game engine of choice, I like its workflow and node structure. It also has mono support for use with C#, Overlay Editor and Tycoon were made in Godot
                         </span>
                     </div>
@@ -151,15 +155,15 @@
                     <div class="tooltip relative inline-block m-10">
                         <img class="h-8 sm:h-16 md:h-24 lg:h-40" src="media/unity.png">
 
-                        <span class="tooltiptext invisible absolute text-center -left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
-                            <b>Unity</b> is the game engine I've used the longest and I completed a gamejam using it! It uses C# which is a nice comfortable language for me 
+                        <span class="tooltiptext invisible absolute text-center -left-36 sm:-left-32 md:-left-28 lg:-left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
+                            <b>Unity</b> is the game engine I've used the longest and I created a gamejam entry using it! It uses C# which is a nice comfortable language for me 
                         </span>
                     </div>
 
                     <div class="tooltip relative inline-block m-10">
                         <img class="h-8 sm:h-16 md:h-24 lg:h-40" src="media/unreal.png">
 
-                        <span class="tooltiptext invisible absolute text-center -left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
+                        <span class="tooltiptext invisible absolute text-center -left-36 sm:-left-32 md:-left-28 lg:-left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
                             I refresh myself with <b>Unreal Engine</b> every so often but I haven't really made any substantial projects using it yet. I made a Tetris clone using it a while ago though 
                         </span>
                     </div>
@@ -167,7 +171,7 @@
                     <div class="tooltip relative inline-block m-10">
                         <div class="flex h-full justify-center items-center bg-white rounded md:rounded-xl lg:rounded-2xl text-xs sm:text-xl md:text-3xl lg:text-6xl font-mono font-black text-gray-700">GLSL</div>
 
-                        <span class="tooltiptext invisible absolute text-sm lg:text-base text-center -left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
+                        <span class="tooltiptext invisible absolute text-center right-0 lg:-left-20 w-80 px-5 py-2 mt-4 rounded z-10 bg-gray-900">
                             The background of this website is made using <b>GLSL</b>! The top of this website has buttons in the bottom left for changing shaders which you click again to see the code
                         </span>
                     </div>
